; ModuleID = '/home/carl/AnghaBench/systemd/src/udev/extr_udevd.c_synthesize_change_one.c'
source_filename = "/home/carl/AnghaBench/systemd/src/udev/extr_udevd.c_synthesize_change_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"/uevent\00", align 1
@.str.1 = private unnamed_addr constant [46 x i8] c"device is closed, synthesising 'change' on %s\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"change\00", align 1
@WRITE_STRING_FILE_DISABLE_BUFFER = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [35 x i8] c"Failed to write 'change' to %s: %m\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @synthesize_change_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @synthesize_change_one(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i8* @strjoina(i8* %8, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i8* %9, i8** %6, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @log_device_debug(i32* %10, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0), i8* %11)
  %13 = load i8*, i8** %6, align 8
  %14 = load i32, i32* @WRITE_STRING_FILE_DISABLE_BUFFER, align 4
  %15 = call i32 @write_string_file(i8* %13, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %2
  %19 = load i32*, i32** %4, align 8
  %20 = load i32, i32* %7, align 4
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @log_device_debug_errno(i32* %19, i32 %20, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.3, i64 0, i64 0), i8* %21)
  store i32 %22, i32* %3, align 4
  br label %24

23:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %23, %18
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i8* @strjoina(i8*, i8*) #1

declare dso_local i32 @log_device_debug(i32*, i8*, i8*) #1

declare dso_local i32 @write_string_file(i8*, i8*, i32) #1

declare dso_local i32 @log_device_debug_errno(i32*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
